Joomla 4 menu fixes
Fixes the issues with the menu described here: https://lab.civicrm.org/dev/joomla/-/issues/17 covering 5 placements
 - menubar at top
 - menubar under the Joomla toolbar with sidebar expanded
 - menubar under the Joomla tollbar with sidebar shrunk
 - mobile under 747px
 - mobile under 575px
also fixes the search drop down label colour issue.

HOWEVER, this needs testing with Joomla 3.x as J4 does not provide an obvious method to declare itself in the css (ie body class="j4" so am using body.layout-default but not sure this isn't used in some parts of Joomla 3.x).

--- a/css/joomla.css
+++ b/css/joomla.css
@@ -399,3 +399,62 @@ body.admin.com_civicrm #content-right {
 body.ui-dialog-open #status {
   z-index: 100 !important;
 }
+
+/* Joomla 4.0 
+	J4 doesn't add any clear body classes to aid targetting, so trying layout-default selector, but this needs testing on J3.x to avoid regressions. After testing this  belongs in crm-menubar.css
+*/
+
+body.admin.com_civicrm.layout-default #crm-qsearch label {
+	color: #fff;
+}
+@media (min-width: 768px) {
+	body.admin.com_civicrm.layout-default.crm-menubar-below-cms-menu > #civicrm-menu-nav #civicrm-menu {
+	    top: 0;
+	    z-index: 10000;
+	}
+	body.admin.com_civicrm.layout-default.crm-menubar-over-cms-menu #civicrm-menu {
+	    position: absolute;
+	    top: 69px;
+	    left: 48px;
+	    width: calc(100% - 48px);
+	    height: 45px;
+	}
+	body.admin.com_civicrm.layout-default.crm-menubar-over-cms-menu.crm-menubar-visible {
+		padding-top: 0;
+	}
+}
+@media (max-width: 767px) {
+	body.admin.com_civicrm.layout-default #civicrm-menu-nav .crm-menubar-toggle-btn {
+	    top: 66px;
+	    left: 42px;
+	    height: 44px;
+	    width: calc(100% - 48px);
+    }
+    body.admin.com_civicrm.layout-default #civicrm-menu {
+	    top: 66px;
+		width: calc(100% - 48px);
+		left: 48px;
+	}
+    body.admin.com_civicrm.layout-default #civicrm-menu li a {
+	    text-align: left;
+    }
+}
+@media (max-width: 575px) {
+	body.admin.com_civicrm.layout-default #civicrm-menu-nav .crm-menubar-toggle-btn {
+	    top: 55px;
+	    left: 0;
+	    width: 100%;
+	    margin: 0;
+    }
+    body.admin.com_civicrm.layout-default #civicrm-menu {
+	    top: 55px;
+		width: 100%;
+		left: 0;
+	}
+    body.admin.com_civicrm.layout-default #civicrm-menu-nav {
+	    z-index: 1000;
+    }
+    body.admin.com_civicrm.layout-default #civicrm-menu li a {
+	    text-align: left;
+    }
+}
